[tool.poetry]
name = "bottomless"
version = "0.1.0"
description = ""
authors = ["Jacob Sansbury <sansburyjacob@gmail.com>"] # add yourself here
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
